--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stock App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "tsc && nodemon src/controllers/index.ts"
   },
   "repository": {
     "type": "git",
@@ -25,19 +25,31 @@
   },
   "homepage": "https://github.com/IreneHodge/Stock-A-Roo#readme",
   "dependencies": {
-    "@types/express": "^4.17.13",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "mongoose": "^5.13.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.3.5"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/node": "^7.14.9",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.9",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.4.10",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "babel": "^6.23.0",
+    "html-webpack-plugin": "^5.3.2",
+    "image-webpack-loader": "^7.0.1",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "ts-loader": "^9.2.4",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5",
     "web-dev-server": "^3.0.22",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2"
