--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Stock App",
   "main": "index.js",
   "scripts": {
-    "server": "tsc && nodemon src/controllers/index.ts"
+    "server": "tsc && nodemon src/controllers/index.ts",
+    "build": "webpack",
+    "build:dev": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
