--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "homepage": "https://github.com/IreneHodge/Stock-A-Roo#readme",
   "dependencies": {
+    "@fontsource/roboto": "^4.5.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "mongoose": "^5.13.5",
@@ -37,18 +40,23 @@
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.9",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
     "@babel/preset-env": "^7.14.9",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@types/express": "^4.17.13",
+    "@types/material-ui": "^0.21.9",
     "@types/node": "^16.4.10",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "babel": "^6.23.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "image-webpack-loader": "^7.0.1",
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
+    "style-loader": "^3.2.1",
     "ts-loader": "^9.2.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
