--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "image-webpack-loader": "^7.0.1",
     "nodemon": "^2.0.12",
