--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stock-a-roo",
+  "name": "WATCHSTOCK",
   "version": "1.0.0",
   "description": "Stock App",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IreneHodge/Stock-A-Roo.git"
+    "url": "git+https://github.com/IreneHodge/WATCHSTOCK.git"
   },
   "keywords": [
     "TypeScript",
@@ -30,13 +30,15 @@
     "@fontsource/roboto": "^4.5.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@types/styled-components": "^5.1.12",
     "axios": "^0.21.1",
     "csstype": "^3.0.8",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
